Remove jank from overlay menu animation - Fixed menu jumping due to scrollbar showing/hiding

--- a/_assets/stylesheets/_masthead.scss
+++ b/_assets/stylesheets/_masthead.scss
@@ -77,8 +77,8 @@
   position: fixed;
   left: 0;
   top: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #fff;
   z-index: 10;
   text-align: center;
